deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"name":"api"}},"template":{"metadata":{"labels":{"name":"api"}},"spec":{"containers":[{"image":"majedur708/hlf-api:4.8","imagePullPolicy":"Always","name":"api","resources":{"limits":{"cpu":"400m","memory":"450Mi"},"requests":{"cpu":"300m","memory":"400Mi"}},"stdin":true,"tty":true,"volumeMounts":[{"mountPath":"/usr/src/app/connection-p [...]
  creationTimestamp: "2025-01-21T06:02:22Z"
  generation: 1
  name: api
  namespace: default
  resourceVersion: "239178"
  uid: 187e4ff0-ed99-4754-9e38-ee3d43c9a9aa
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: api
    spec:
      containers:
      - image: majedur708/hlf-api:4.8
        imagePullPolicy: Always
        name: api
        resources:
          limits:
            cpu: 400m
            memory: 450Mi
          requests:
            cpu: 300m
            memory: 400Mi
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /usr/src/app/connection-profile
          name: data
          subPath: connection-profile
        - mountPath: /organizations
          name: data
          subPath: organizations
        - mountPath: /usr/src/app/wallet
          name: data
          subPath: wallet
        - mountPath: /usr/src/app/config.json
          name: ca-client-config
          subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mypvc
      - configMap:
          defaultMode: 420
          items:
          - key: config.json
            mode: 356
            path: config.json
          name: ca-client-config
        name: ca-client-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-01-21T06:02:32Z"
    lastUpdateTime: "2025-01-21T06:02:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-01-21T06:02:22Z"
    lastUpdateTime: "2025-01-21T06:02:32Z"
    message: ReplicaSet "api-8495769f77" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
