ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"ingress","namespace":"default"},"spec":{"rules":[{"host":"www.patient-bio.majedurnitol.site","http":{"paths":[{"backend":{"service":{"name":"api","port":{"number":4000}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2025-02-20T18:17:10Z"
  generation: 5
  name: ingress
  namespace: default
  resourceVersion: "8091"
  uid: d32ebfbe-8469-4f83-bb73-fd3f1341d5a8
spec:
  rules:
  - host: www.patient-bio.majedurnitol.site
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 4000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 209.38.124.166
